# blossom

./: config.py  config.yml  main.py  orchestrator.py  pyproject.toml
audio/: stt.py  tts.py
plugins/: base.py  math_tool.py  plugin_manager.py  shell_tool.py  testplugin.py
prompt/: builder.py
response/: __init__.py  gemini.py  llm.py
src/: config.py  main.py  orchestrator.py
src/audio/: __init__.py  shared_audio.py  stt.py
src/cache/: manager.py
src/memory/: __init__.py  consolidation_task.py  manager.py  models.py
src/memory/storage/: __init__.py  sqlite_store.py  vector_store.py
src/plugins/: browser_tool.py  plugin_manager.py  shell_tool.py
src/prompt/: builder.py
