[project]
name = "blossom"
version = "0.1.0"
description = "My Voice Assistant"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "coqui-tts>=0.27.2",
    "dotenv>=0.9.9",
    "google-genai>=1.46.0",
    "python-dotenv>=1.1.1",
    "sounddevice>=0.5.3",
    "speexdsp>=0.1.1",
    "vosk>=0.3.45",
]
